@@ -1,0 +1,12 @@
+#!/bin/sh
+
+IPPARAM="${6}"
+
+if [ "x${IPPARAM}" != "xsynce-bt" ]; then
+    exit 0
+fi
+
+UDI="synce_bluetooth_device_${IPREMOTE}"
+UDI=$(echo "$UDI" |sed 's|\.|_|g')
+
+hal-device --remove ${UDI}
