@@ -1,0 +1,22 @@
+#!/bin/sh
+
+IPPARAM="${6}"
+
+if [ "x${IPPARAM}" != "xsynce-bt" ]; then
+    exit 0
+fi
+
+UDI="synce_bluetooth_device_${IPREMOTE}"
+UDI=$(echo "$UDI" |sed 's|\.|_|g')
+
+hal-device --add ${UDI} << EOF
+  info.capabilities = {'serial', 'pda', 'sync'} (string list)
+  info.category = 'pda'  (string)
+  info.product = 'Pocket PC PDA'  (string)
+  pda.platform = 'pocketpc'  (string)
+  sync.engine = 'opensync'  (string)
+  sync.plugin = 'synce'  (string)
+  serial.device = '${DEVICE}'  (string)
+  net.interface = '${IFNAME}'  (string)
+  info.addons = {'hal-synce-bluetooth'} (string list)
+EOF
